# SocTest

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: mediapipe_selfie_segmentation.onnx  mediapipe_selfie_segmentation_float32.tflite
app/src/main/assets/models/ncnn/: mediapipe_selfie_segmentation.param  rtmpose_t_body7_256x192.param
app/src/main/cpp/: CMakeLists.txt  ncnn_bridge.cpp
app/src/main/java/com/rockenmini/socbenchmark/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/rockenmini/socbenchmark/benchmark/: BenchmarkModels.kt  BenchmarkPreset.kt  BenchmarkTimer.kt  NcnnBridge.kt  OnnxRuntimeBackends.kt  TfLiteBackends.kt
app/src/main/java/com/rockenmini/socbenchmark/pose/: MoveNetPoseDetector.kt  PoseDetector.kt  RtmposeNcnnPoseDetector.kt  RtmposeOnnxPoseDetector.kt
app/src/main/java/com/rockenmini/socbenchmark/preview/: PreviewModels.kt  PreviewPipeline.kt
app/src/main/java/com/rockenmini/socbenchmark/segmentation/: SegmentationDetector.kt  SelfieSegmentationDetector.kt
app/src/main/res/values/: strings.xml  themes.xml
